<resources>
    <string name="app_name">HabitTrainer</string>
    <string name="habit_icon">Habit Icon</string>
    <string name="drink_water">Drink water</string>
    <string name="drink_water_desc">A refreshing glass of water gets you hydrated</string>
    <string name="begin_habit">Begin new habit</string>
    <string name="title_activity_create_habit">CreateHabitActivity</string>
    <string name="eat_an_apple">Eat an apple</string>
    <string name="apple_away">An apple a day keeps the doctor away</string>
    <string name="choose_image">Choose image</string>
    <string name="selected_image">Selected image</string>
    <string name="save_habit">Save habit</string>
</resources>
