<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.jaime.habittrainer.CreateHabitActivity"
        android:orientation="vertical">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTitle"
            android:hint="@string/eat_an_apple"
    />

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/etDescription"
              android:inputType="textMultiLine"
              android:lines="2"
              android:hint="@string/apple_away"
    />

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnChooseImage"
            android:text="@string/choose_image"
            android:onClick="chooseImage"
    />

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/ivImage"
               android:layout_gravity="center_horizontal"
               android:padding="10dp"
               android:contentDescription="@string/selected_image"
    />

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:text="@string/save_habit"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tvError"
              android:visibility="invisible"
              android:textColor="#e53935"
    />
</LinearLayout>
